# cista

./: .polish-inspected.json  Cargo.toml  README.md
.github/workflows/: release.yml
crates/hygiene-ratchet/: Cargo.toml
crates/hygiene-ratchet/src/: lib.rs
docs/factory/: README.md  test-decomposition-report.md
docs/factory/cista-dev-registry/: CAMPAIGN.md  stage0-threat-model.md
docs/factory/cista-package-store/: goal.md  phase-a-delivery.md  phase-b-delivery.md  phase-b-problem.md  phase-c-delivery.md  phase-d-delivery.md  phase-e-delivery.md  phase-f-delivery.md
docs/release/: v0.1.0.md
src/: cache.rs  cli.rs  cli_test.rs  credentials.rs  credentials_test.rs  diagnostics.rs  faber_lock.rs  faber_lock_test.rs  lib.rs  manifest.rs  manifest_test.rs  package.rs  project_manifest.rs  project_manifest_test.rs  registry_http.rs  registry_http_test.rs  resolver.rs  runtime.rs  store.rs  store_test.rs  target.rs
src/commands/: cache.rs  check.rs  doctor.rs  fetch.rs  fs_util.rs  fs_util_test.rs  graph.rs  init.rs  inspect.rs  inspect_test.rs  install.rs  install_test.rs  login.rs  logout.rs  metadata.rs  mod.rs  package.rs  package_test.rs  publish.rs  registry.rs  registry_test.rs  remove.rs  remove_test.rs  resolve.rs  run.rs  run_test.rs  runtime.rs  rust_target.rs  rust_target_test.rs  shared.rs  shared_test.rs  staged.rs  target.rs  update.rs  yank.rs
tests/: hygiene.rs
