[package]
name = "cista"
version = "0.1.0"
edition = "2021"
description = "Faber package-store and runtime binding library and CLI"
license = "MIT"
readme = "README.md"

[lib]
name = "cista"
path = "src/lib.rs"

[[bin]]
name = "cista"
path = "src/bin/cista.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
hygiene-ratchet = { path = "../radix/crates/hygiene-ratchet" }
